# hr-policy-automation-proposal

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  spec.md
src/: __init__.py  chunker.py  config.py  documents.py  embeddings.py  eval.py  ingest.py  llm.py  prompts.py  query.py  store.py  ui.py
tests/: README.md  golden_qa.json
