[project]
name = "hr-policy-rag"
version = "0.1.0"
description = "Guardrailed Knowledge RAG for HR policy Q&A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "groq>=0.18",
    "openai>=1.58",
    "pypdf>=5.1",
    "python-dotenv>=1.0",
    "tiktoken>=0.8",
]

[project.scripts]
hr-ingest = "src.ingest:main"
hr-query = "src.query:main"
hr-eval = "src.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
